# teht2

./: README.md
nhl-statistics-1/: .coverage  pyproject.toml
nhl-statistics-1/src/: index.py  player.py  player_reader.py  statistics_service.py
nhl-statistics-1/src/tests/: statistics_test.py
poetry-web/: pyproject.toml
